fix: Lower leaflet’s z-index relative to nav
https://github.com/metanorma/metanorma.com/issues/5

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -412,6 +412,10 @@
 }
 
 @mixin docs-page($primary-dark-color) {
+  .leaflet-pane {
+    z-index: 3;
+  }
+
   > header.documentation-header,
   > section.documentation {
     align-self: stretch;
